# spotify-mutify

./: Cargo.toml  LICENSE  README.md
src/: macos.rs  main.rs  spotify.rs  watcher.rs  windows.rs
