[package]
name = "spotify-mutify"
version = "0.1.0"
description = "Mute those overly loud Spotify Ads"
edition = "2018"
authors = ["Thomas McNiven <hello@vevix.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/trmcnvn/spotify-mutify"
keywords = ["spotify", "windows"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
structopt = "0.2"
crossbeam-channel = "0.3.8"
notify = "=5.0.0-pre.1"
directories = "2.0"
failure = "0.1"
ctrlc = { version = "3.1", features = ["termination"] }

[target.'cfg(windows)'.dependencies]
external = { git = "https://github.com/CasualX/external", rev = "af1c872" }
pelite = { git = "https://github.com/CasualX/pelite", rev = "155918a" }
winapi = { version = "0.3", features = ["audioclient", "audiopolicy", "combaseapi", "mmdeviceapi"] }
com_ptr = "0.1"

# Dependent on PR and build fixes
[patch.crates-io]
winapi = { path = "../winapi-rs" }
