[package]
name = "spotify-mutify"
version = "0.1.0"
description = "Mute those obnoxiously loud Spotify Ads"
edition = "2018"
authors = ["Thomas McNiven <hello@vevix.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/trmcnvn/spotify-mutify"
keywords = ["spotify", "ads", "mute"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
notify = "=5.0.0-pre.2"
directories = "2.0"
anyhow = "1.0"
ctrlc = { version = "3.1", features = ["termination"] }
flume = "0.6"

[target.'cfg(windows)'.dependencies]
external = { git = "https://github.com/CasualX/external", rev = "c680919" }
pelite = "0.8"
winapi = { version = "0.3", features = ["audioclient", "audiopolicy", "combaseapi", "mmdeviceapi", "objbase"] }
com_ptr = "0.1"

[replace]
"winapi:0.3.8" = { git = "https://github.com/trmcnvn/winapi-rs", branch = "trmcnvn/audio" }
